--- a/WebServicesFigaro/WebServicesFigaro.csproj
+++ b/WebServicesFigaro/WebServicesFigaro.csproj
@@ -511,10 +511,21 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Images\barcelona.jpg" />
+    <Content Include="Content\Images\Carpaccio_atun.jpg" />
     <Content Include="Content\Images\dublin.jpg" />
+    <Content Include="Content\Images\Ensalada_caprese.jpg" />
+    <Content Include="Content\Images\Ensalada_cesar.jpg" />
+    <Content Include="Content\Images\Espaguetti.jpg" />
+    <Content Include="Content\Images\Fideos_chinos.jpg" />
+    <Content Include="Content\Images\Helado.jpg" />
+    <Content Include="Content\Images\Lasana_bolognesa.jpg" />
     <Content Include="Content\Images\london.jpg" />
+    <Content Include="Content\Images\Macarroni.jpg" />
     <Content Include="Content\Images\madrid.jpg" />
     <Content Include="Content\Images\moscow.jpg" />
+    <Content Include="Content\Images\Pad_Thai.jpg" />
+    <Content Include="Content\Images\Pan_al_vapor.jpg" />
+    <Content Include="Content\Images\Pizza_margarita.jpg" />
     <Content Include="Content\Images\plato_arroz.jpg" />
     <Content Include="Content\Images\plato_asian.jpg" />
     <Content Include="Content\Images\plato_calamari.jpg" />
@@ -522,6 +533,8 @@
     <Content Include="Content\Images\plato_pastel.jpg" />
     <Content Include="Content\Images\plato_pizza.jpg" />
     <Content Include="Content\Images\plato_raro.jpg" />
+    <Content Include="Content\Images\Rollitos.jpg" />
+    <Content Include="Content\Images\Tiramisu.jpg" />
     <Content Include="Content\Images\ui-bg_diagonals-thick_18_b81900_40x40.png" />
     <Content Include="Content\Images\ui-bg_diagonals-thick_20_666666_40x40.png" />
     <Content Include="Content\Images\ui-bg_glass_100_f6f6f6_1x400.png" />
