--- a/Figaro/Figaro.Droid/Properties/AndroidManifest.xml
+++ b/Figaro/Figaro.Droid/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" package="Figaro.Figaro" android:versionCode="1" android:versionName="1.15">
 	<uses-sdk android:minSdkVersion="14" />
-	<application android:label="Figaro"></application>
+	<application android:label="Figaro" android:icon="@drawable/icono"></application>
 	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-permission android:name="android.permission.VIBRATE" />
 	<uses-feature android:name="android.hardware.camera" android:required="false" />
